# data-engineering-process

./: .env  .gitignore  README.md  docker-compose.airflow.yml  docker-compose.app.yml  pyproject.toml
dags/: __main__.py  config.py  config_path.py
data/processed/: dailycheckins.parquet
docker/: Dockerfile.airflow  Dockerfile.app  requirements.app.txt  requirements.txt
src/: app copy.py  app.py  config_paths.py  configs.py  ingest.py  pretest.py  transform.py  validate_ingest.py
tests/: test copy.ipynb  test.ipynb
